# open-vino-experiments

./: .env.sample  .envrc.sample  .gitignore  LICENSE  README.md  config.toml  pyproject.toml  requirements.txt
ov-manager/: ov-manager.toml  pyproject.toml
ov-manager/src/ov_manager/: __init__.py  cli.py  config.py  runtime.py
ov-manager/src/ov_manager/backend/: __init__.py  baremetal.py  base.py  docker.py
ov-manager/src/ov_manager/commands/: __init__.py  models.py  server.py
ov-manager/tests/: conftest.py  test_config.py  test_runtime.py  test_server.py
ov-testdata-scraper/: .gitignore  README.md  pyproject.toml
ov-testdata-scraper/src/ov_testdata_scraper/: __init__.py  cli.py  scraper.py  state.py
samples/: text_generation.py
